--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,9 @@ html {
   overflow: -moz-scrollbars-vertical; 
   overflow-y: scroll;
 }
+body {
+  background-color: skyblue;
+}
 
 .card {
   border: 0px;
