--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -42,17 +42,20 @@ hr {
     border-bottom: 1px solid darkgray;
   }
   
-    .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+    /* .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
       color: #495057;
       background-color: darkgray;
       border-color: darkgray darkgray lightgray;
-  }
+  } */
   
   li > button.nav-link, li > button.nav-link:hover {
     color: inherit;
     background-color: grey;
   }
-  .navbar-dark .navbar-nav .nav-link.active {
+
+
+  /* .navbar-dark .navbar-nav .nav-link.active  */
+  [aria-current="page"] {
     background-color: #464a4e;
     border-radius: 10px;
   }
