Added print option

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,10 @@
     background-color: var(--bs-gray-300) !important;
 }
 
+// @media print {
+//     .bg-gray-300 {
+//         // --bs-bg-opacity: 1;
+//         background-color: var(--bs-gray-300) !important;
+//     }
+// }
+
