--- a/src/App.css
+++ b/src/App.css
@@ -11961,4 +11961,11 @@ fieldset:disabled .btn {
   --bs-bg-opacity: 1;
   background-color: var(--bs-gray-300) !important;
 }
+
+@media print {
+  .bg-gray-300 {
+    --bs-bg-opacity: 1;
+    background-color: var(--bs-gray-300) !important;
+  }
+}
 /*# sourceMappingURL=App.css.map */
