Updated package dependencies to reduce number of dependents

--- a/src/App_custom.css
+++ b/src/App_custom.css
@@ -59,7 +59,7 @@ body {
   }
   body { 
     -webkit-print-color-adjust: exact; 
-    color-adjust: exact;
+    print-color-adjust: exact;
   }
   .navbar {
     display: none;
